@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-26T08:19:35Z",
+  "timestamp" : "2023-07-26T16:19:58Z",
   "count_outdated" : 715,
   "uniques_outdated" : 408,
-  "count" : 749,
+  "count" : 750,
   "uniques" : 429,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
